--- a/.hintrc
+++ b/.hintrc
@@ -21,7 +21,8 @@
     "axe/text-alternatives": [
       "default",
       {
-        "image-alt": "off"
+        "image-alt": "off",
+        "frame-title": "off"
       }
     ],
     "no-inline-styles": "off",
@@ -29,6 +30,14 @@
       "default",
       {
         "listitem": "off"
+      }
+    ],
+    "compat-api/html": [
+      "default",
+      {
+        "ignore": [
+          "iframe[loading]"
+        ]
       }
     ]
   }
