--- a/.hintrc
+++ b/.hintrc
@@ -42,6 +42,15 @@
       {
         "label": "off"
       }
+    ],
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "text-decoration-thickness",
+          "text-underline-offset"
+        ]
+      }
     ]
   }
 }
